--- a/groups/src/main/res/layout/fragment_add_group.xml
+++ b/groups/src/main/res/layout/fragment_add_group.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".AddGroupFragment"
+    tools:context=".FeatureFragment"
     android:background="#121212">
 
     <Button
